--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li> futsal </li>
             <li> traveling </li>
         </ul>
+        <a href="">Klik Halaman Baru</a>
         <h4> My Goals </h4>
         <ol> 
             <li> saya ingin laptop spek dewa </li>
