--- a/form.html
+++ b/form.html
@@ -108,6 +108,12 @@
             <td>Alamat</td>
             <td>: <textarea name="alamat" id="alamat" cols="30" rows="5"></textarea></td>
         </tr>
+        <tr>
+            <td></td>
+            <td>
+                <button type="submit">Simpan Data</button>
+            </td>
+        </tr>
       </table>
     </form>
 
